--- a/app/assets/stylesheets/bootstrap-custom.scss.erb
+++ b/app/assets/stylesheets/bootstrap-custom.scss.erb
@@ -42,13 +42,9 @@ body {
 }
 
 /* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-    padding: 14px 24px;
-    font-size: 21px;
+.banner-image {
+    margin-bottom: 4em;
+    box-shadow: 4px 4px 5px #999;
 }
 
 /* Supporting marketing content */
