--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,20 @@
-<div class="jumbotron">
-    <h1>Jumbotron heading</h1>
-    <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+<div class="row">
+    <div class="col-lg-12 center">
+        <%= image_tag('fire_made_it_better_700.png', {class: 'img-rounded img-responsive banner-image'}) %>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <a class="btn btn-lg btn-success" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            get me some
+        </a>
+        <div class="collapse" id="collapseExample">
+              <div class="well">
+                <%= render 'form' %>
+              </div>
+        </div>
+    </div>
 </div>
 
 <div class="row marketing">
@@ -11,9 +24,6 @@
 
     <h4>Subheading</h4>
     <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
   </div>
 
   <div class="col-lg-6">
@@ -22,8 +32,5 @@
 
     <h4>Subheading</h4>
     <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
   </div>
 </div>
