--- a/app/assets/stylesheets/flamingmoe.scss.erb
+++ b/app/assets/stylesheets/flamingmoe.scss.erb
@@ -47,29 +47,18 @@ body {
     box-shadow: 4px 4px 5px #999;
 }
 
+#orders-collapse {
+    margin-top: 1em;
+}
+
+#orders-collapse .well {
+    box-shadow: 4px 4px 5px #999;
+}
+
 /* Supporting marketing content */
 .marketing {
     margin: 40px 0;
 }
 .marketing p + h4 {
     margin-top: 28px;
-}
-
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
-        padding-right: 0;
-        padding-left: 0;
-    }
-    /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
-    }
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
-    }
 }
