--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+        <script src="//js.pusher.com/2.2/pusher.min.js"></script>
         <%= csrf_meta_tags %>
 
         <title>Flaming Moe</title>
