--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@order, remote: true, html: {class: 'form-horizontal'}) do |f| %>
+<%= form_for(@order, remote: true, html: {class: 'form-horizontal well'}) do |f| %>
     <% if @order.errors.any? %>
         <div id="error_explanation">
             <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -12,66 +12,67 @@
     <% end %>
 
     <div class="form-group">
-        <%= f.label :quantity, class: 'col-sm-2 control-label' %>
-        <div class="col-sm-10">
+        <%= f.label :quantity, class: 'col-sm-3 control-label' %>
+        <div class="col-sm-9">
             <%= f.number_field :quantity, class: 'form-input' %>
         </div>
     </div>
     <div class="form-group">
-        <%= f.label :product, class: 'col-sm-2 control-label' %>
-        <div class="col-sm-10">
+        <%= f.label :product, class: 'col-sm-3 control-label' %>
+        <div class="col-sm-9">
             <%= f.collection_select(:product_id, Product.all, :id, :name, {}, {class: 'form-input'}) %>
         </div>
     </div>
 
     <%= f.fields_for :customer, @order.customer do |c| %>
         <div class="form-group">
-            <%= f.label :name, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
+            <%= f.label :name, class: 'col-sm-3 control-label' %>
+            <div class="col-sm-9">
                 <%= c.text_field :name, class: 'form-input' %>
             </div>
         </div>
         <div class="form-group">
-            <%= f.label :email, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
+            <%= f.label :email, class: 'col-sm-3 control-label' %>
+            <div class="col-sm-9">
                 <%= c.text_field :email, class: 'form-input' %>
             </div>
         </div>
         <div class="form-group">
-            <%= f.label :address, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
+            <%= f.label :address, class: 'col-sm-3 control-label' %>
+            <div class="col-sm-9">
                 <%= c.text_field :address, class: 'form-input' %>
             </div>
         </div>
         <div class="form-group">
-            <%= f.label :city, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
+            <%= f.label :city, class: 'col-sm-3 control-label' %>
+            <div class="col-sm-9">
                 <%= c.text_field :city, class: 'form-input' %>
             </div>
         </div>
         <div class="form-group">
-            <%= f.label :country, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
+            <%= f.label :country, class: 'col-sm-3 control-label' %>
+            <div class="col-sm-9">
                 <%= c.text_field :country, class: 'form-input' %>
             </div>
         </div>
         <div class="form-group">
-            <%= f.label :credit_card, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
+            <%= f.label :credit_card, class: 'col-sm-3 control-label' %>
+            <div class="col-sm-9">
                 <%= c.text_field :credit_card, class: 'form-input' %>
             </div>
         </div>
         <div class="form-group">
-            <%= f.label :expiry, class: 'col-sm-2 control-label' %>
-            <div class="col-sm-10">
+            <%= f.label :expiry, class: 'col-sm-3 control-label' %>
+            <div class="col-sm-9">
                 <%= c.text_field :expiry, class: 'form-input', placeholder: 'mmyyyy' %>
             </div>
         </div>
     <% end %>
 
     <div class="form-group">
-        <div class="col-sm-offset-9 col-sm-3">
-            <%= f.submit class: 'btn btn-default' %>
+        <div class="col-sm-12">
+            <%= f.submit class: 'btn btn-success' %>
+            <input type="reset" value="I'm not worthy" class="btn btn-warning">
         </div>
     </div>
 <% end %>
