--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,13 +6,25 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <a class="btn btn-lg btn-success" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+        <a class="btn btn-lg btn-primary" data-toggle="collapse" href="#orders-collapse" aria-expanded="false" aria-controls="orders-collapse">
             get me some
         </a>
-        <div class="collapse" id="collapseExample">
-              <div class="well">
-                <%= render 'form' %>
-              </div>
+    </div>
+</div>
+
+<div class="row collapse" id="orders-collapse">
+    <div class="col-lg-6">
+        <%= render 'form' %>
+    </div>
+
+    <div class="col-lg-6">
+        <div class="well">
+            <table id="recent-orders" class="table">
+                <caption>recent orders</caption>
+                <tbody>
+                <%= render partial: 'order', collection: @orders %>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
