--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -46,3 +46,7 @@
     <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
   </div>
 </div>
+
+<script type="text/javascript">
+    var prices = <%= raw(@prices.to_json) %>;
+</script>
