--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,6 +5,18 @@
 </div>
 
 <div class="row">
+    <div class="panel panel-default">
+        <div class="panel-heading">how popular is this stuff?</div>
+        <div class="panel-body text-center">
+            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>&nbsp;
+            total orders: <strong class="text-primary" id="order-count"><%= @order_count %></strong>
+            <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>&nbsp;
+            shipped orders: <strong class="text-primary" id="shipped-count"><%= @shipped_count %></strong>
+        </div>
+    </div>
+</div>
+
+<div class="row">
     <div class="col-lg-12">
         <a class="btn btn-lg btn-primary" data-toggle="collapse" href="#orders-collapse" aria-expanded="false" aria-controls="orders-collapse">
             get me some
