some clean up and some javascript form validation

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,9 +8,9 @@
     <div class="panel panel-default">
         <div class="panel-heading">how popular is this stuff?</div>
         <div class="panel-body text-center">
-            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>&nbsp;
+            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
             total orders: <strong class="text-primary" id="order-count"><%= @order_count %></strong>
-            <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>&nbsp;
+            <span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-left: 2em"></span>
             shipped orders: <strong class="text-primary" id="shipped-count"><%= @shipped_count %></strong>
         </div>
     </div>
