--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -14,7 +14,7 @@
     <div class="form-group">
         <%= f.label :quantity, class: 'col-sm-3 control-label' %>
         <div class="col-sm-9">
-            <%= f.number_field :quantity, class: 'form-input' %>
+            <%= f.number_field :quantity, class: 'form-input', required: 'required' %>
         </div>
     </div>
     <div class="form-group">
@@ -35,43 +35,43 @@
         <div class="form-group">
             <%= f.label :name, class: 'col-sm-3 control-label' %>
             <div class="col-sm-9">
-                <%= c.text_field :name, class: 'form-input' %>
+                <%= c.text_field :name, class: 'form-input', required: 'required' %>
             </div>
         </div>
         <div class="form-group">
             <%= f.label :email, class: 'col-sm-3 control-label' %>
             <div class="col-sm-9">
-                <%= c.text_field :email, class: 'form-input' %>
+                <%= c.text_field :email, class: 'form-input', required: 'required' %>
             </div>
         </div>
         <div class="form-group">
             <%= f.label :address, class: 'col-sm-3 control-label' %>
             <div class="col-sm-9">
-                <%= c.text_field :address, class: 'form-input' %>
+                <%= c.text_field :address, class: 'form-input', required: 'required' %>
             </div>
         </div>
         <div class="form-group">
             <%= f.label :city, class: 'col-sm-3 control-label' %>
             <div class="col-sm-9">
-                <%= c.text_field :city, class: 'form-input' %>
+                <%= c.text_field :city, class: 'form-input', required: 'required' %>
             </div>
         </div>
         <div class="form-group">
             <%= f.label :country, class: 'col-sm-3 control-label' %>
             <div class="col-sm-9">
-                <%= c.text_field :country, class: 'form-input' %>
+                <%= c.text_field :country, class: 'form-input', required: 'required' %>
             </div>
         </div>
         <div class="form-group">
             <%= f.label :credit_card, class: 'col-sm-3 control-label' %>
             <div class="col-sm-9">
-                <%= c.text_field :credit_card, class: 'form-input' %>
+                <%= c.text_field :credit_card, class: 'form-input', required: 'required' %>
             </div>
         </div>
         <div class="form-group">
             <%= f.label :expiry, class: 'col-sm-3 control-label' %>
             <div class="col-sm-9">
-                <%= c.text_field :expiry, class: 'form-input', placeholder: 'mmyyyy' %>
+                <%= c.text_field :expiry, class: 'form-input', placeholder: 'mmyyyy', required: 'required' %>
             </div>
         </div>
     <% end %>
